first 2 sliders working

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Audiowide|Inconsolata|Special+Elite|Roboto|Roboto+Mono" rel="stylesheet">
   <title>React Color Picker</title>
 </head>
 <body>
